# link-shorter

./: .gitignore  README.md  app.py  db_init.py  models.py  pyproject.toml  requirements.txt
application/: models.py  urls.py
application/templates/application/: index.html
shorter/: settings.py  urls.py
templates/: base.html  index.html  stats.html
templates/inc/: _navbar.html
