[tool.poetry]
name = "link-shorter"
version = "0.1.0"
description = ""
authors = ["a-khomitskyi <homitskiy.andriy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
dj-database-url = "^0.5.0"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
